--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,6 +20,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      checks: write
+      issues: write
 
     steps:
     - uses: actions/checkout@v4
@@ -31,3 +35,21 @@ jobs:
         cache: maven
     - name: Execute Test 
       run: mvn clean test -Dsuite=UserManagement
+
+    - name: Upload a Build Artifact
+      if: always()
+      uses: actions/upload-artifact@v7.0.0
+      with:
+        name: Logs
+        path: logs/
+          test-output/reports/
+          target/surefire-reports/
+          logs/
+    
+    - name: Publish Test Report
+      if: always()
+      uses: dorny/test-reporter@v1
+      with:
+        name: TestNG Results
+        path: target/surefire-reports/junitreports/TEST-*.xml
+        reporter: java-junit
